--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,5 +9,6 @@ edition = "2021"
 colored = "2.0.4"
 html5ever = "0.26.0"
 kuchiki = "0.8.1"
+markdown = "0.3.0"
 markup5ever = "0.10.1"
 markup5ever_rcdom = "0.2.0"
