--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,12 +7,12 @@ edition = "2021"
 
 [dependencies]
 colored = "2.0.4"
+git2 = "0.18.1"
 html5ever = "0.26.0"
 kuchiki = "0.8.1"
 markdown = "0.3.0"
 markup5ever = "0.10.1"
 markup5ever_rcdom = "0.2.0"
-reqwest = "0.11.23"
 serde = "1.0.193"
 serde_derive = "1.0.193"
 serde_json = "1.0.109"
